多域名部署

--- a/.env
+++ b/.env
@@ -32,6 +32,14 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
+#API域名
+API_DOMAIN=pyt.d1.natapp.cc
+#中转域名
+REDIRECT_DOMAIN=pyt.d1.natapp.cc
+#微信单页域名，以半角逗号分隔(,)
+WECHAT_DOMAINS=wx.boeqh.cn,pytwx1.local.com,pytwx2.local.com
+
+
 #短信发送相关配置
 SMS_ACCESSKEYID = LTAINU7KKNSme2iH
 SMS_ACCESSKEYSECRET = zKQLoTes3v6mywhQadt1bsbc9kKPib
