修复单页图片展示

--- a/.env
+++ b/.env
@@ -33,11 +33,11 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
 #API域名
-API_DOMAIN=pyt.d1.natapp.cc
+API_DOMAIN=pyt.local.com
 #中转域名
-REDIRECT_DOMAIN=pyt.d1.natapp.cc
+REDIRECT_DOMAIN=pytwx.local.com
 #微信单页域名，以半角逗号分隔(,)
-WECHAT_DOMAINS=wx.boeqh.cn,pytwx1.local.com,pytwx2.local.com
+WECHAT_DOMAINS=pytwx1.local.com,pytwx2.local.com
 
 
 #短信发送相关配置
