--- a/.env
+++ b/.env
@@ -51,3 +51,6 @@ SMS_CODE_EXPIRE_TIME = 5
 #淘宝账号配置
 TAOBAO_OPEN_APPKEY = 23225630
 TAOBAO_OPEN_SECRETKEY = 93fee8926d98bfb23c05628f701c4b0d
+
+#新浪微博开放平台配置
+SINA_OPEN_KEY = 2307231472
