微信单页增加跳转二合一功能

--- a/.env
+++ b/.env
@@ -37,7 +37,7 @@ API_DOMAIN=pyt.local.com
 #中转域名
 REDIRECT_DOMAIN=pytwx.local.com
 #微信单页域名，以半角逗号分隔(,)
-WECHAT_DOMAINS=pytwx1.local.com,pytwx2.local.com
+WECHAT_DOMAINS=pytwx1.local.com,pytwx2.local.com,pyt.d1.natapp.cc
 
 
 #短信发送相关配置
