--- a/.env
+++ b/.env
@@ -58,3 +58,8 @@ SINA_OPEN_KEY = 2307231472
 
 #es配置
 ELASTICSEARCH_HOST = 120.92.139.36:9200
+
+#代理ip配置
+PROXY_IP = 61.132.93.14:6218
+#代理ip获取地址
+PROXY_IP_URL = http://dynamic.goubanjia.com/dynamic/get/4b42767ae5ae9f10345782f0e6d7a116.html?random=yes
