增加秒杀栏目

--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=192.168.6.66
+DB_HOST=120.92.139.36
 DB_PORT=3306
-DB_DATABASE=pyt_db
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_DATABASE=pytdb
+DB_USERNAME=pytdbuser
+DB_PASSWORD=63pbsZWuzGCPfBxs/I5J
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
