--- a/.env
+++ b/.env
@@ -39,7 +39,7 @@ REDIRECT_DOMAIN=pytwx.local.com
 #微信单页域名，以半角逗号分隔(,)
 WECHAT_DOMAINS=pytwx1.local.com,pytwx2.local.com,pyt.d1.natapp.cc
 #朋友淘域名
-PYTAO_DOMAINS=pytao.test.tuidanke.com
+PYTAO_DOMAINS=pytaotest.tuidanke.com
 
 
 #短信发送相关配置
