更改注册,验证到用户中心

--- a/.env
+++ b/.env
@@ -39,7 +39,7 @@ REDIRECT_DOMAIN=pytwx.local.com
 #微信单页域名，以半角逗号分隔(,)
 WECHAT_DOMAINS=pytwx1.local.com,pytwx2.local.com,pyt.d1.natapp.cc
 #朋友淘域名
-PYTAO_DOMAINS=pytao.test.tuidanke.com
+PYTAO_DOMAINS=pytaotest.tuidanke.com
 
 
 #短信发送相关配置
@@ -60,6 +60,9 @@ SINA_OPEN_KEY = 2307231472
 
 #es配置
 ELASTICSEARCH_HOST = 192.168.233.5:9200
+
+#用户中心服务器地址
+USERCENTER_HOST = http://usercenter.local.com
 
 #代理ip配置
 #PROXY_IP = 61.132.93.14:6218
