修改短信签名

--- a/.env
+++ b/.env
@@ -46,7 +46,7 @@ PYTAO_DOMAINS=pytaotest.tuidanke.com
 SMS_ACCESSKEYID = LTAINU7KKNSme2iH
 SMS_ACCESSKEYSECRET = zKQLoTes3v6mywhQadt1bsbc9kKPib
 #短信签名
-SMS_SIGNNAME = 推单客
+SMS_SIGNNAME = 推客互动
 #短信验证码过期时间
 SMS_CODE_EXPIRE_TIME = 5
 
