--- a/.env
+++ b/.env
@@ -6,18 +6,18 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=192.168.0.243
+DB_HOST=192.168.233.9
 DB_PORT=3306
 DB_DATABASE=pytdb
-DB_USERNAME=root
-DB_PASSWORD=123456
+DB_USERNAME=pytdbuser
+DB_PASSWORD=63pbsZWuzGCPfBxs/I5J
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
 SESSION_DRIVER=redis
 QUEUE_DRIVER=redis
 
-REDIS_HOST=192.168.0.243
+REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
